# ArcoLang

./: .gitignore  CMakeLists.txt  README.md
arco/: AST.cpp  AST.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Compiler.cpp  Compiler.h  Context.cpp  Context.h  EmitDebugInfo.cpp  EmitDebugInfo.h  ExpandedLoc.cpp  ExpandedLoc.h  Files.cpp  Files.h  FloatConversions.cpp  FloatConversions.h  Generics.cpp  Generics.h  IRGen.cpp  IRGen.h  Identifier.cpp  Identifier.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  Prelude.h  Process.cpp  Process.h  SemAnalysis.cpp  SemAnalysis.h  Source.h  SpellChecking.cpp  SpellChecking.h  TermColors.cpp  TermColors.h  Tokens.cpp  (+5 more)
driver/: CMakeLists.txt  Options.h  (+2 more)
tests/: CMakeLists.txt  TestProcessUtil.cpp  TestProcessUtil.h  Tests.cpp
tests/resources/: and_operator.arco  bin_literals.arco  binary_operators.arco  bool_literals.arco  constant_folding.arco  constructor_initializers.arco  copy_constructors.arco  default_args.arco  field_comptime.arco  float_literals.arco  function_type.arco  heap_alloc.arco  hello_world.arco  hex_literals.arco  increments.arco  infered_types.arco  literal_type_info.arco  lots_of_errors.arco  move_constructors.arco  multiarray_to_voidptr_craziness.arco  nested_blocks.arco  or_operator.arco  pointer_arithmetic.arco  sizeof_test.arco  test_utils.arco  var_decl_list.arco
tests/resources/arrays/: arrays1.arco  arrays10.arco  arrays11.arco  arrays12.arco  arrays13.arco  arrays14.arco  arrays15.arco  arrays16.arco  arrays17.arco  arrays18.arco  arrays2.arco  arrays3.arco  arrays4.arco  arrays5.arco  arrays6.arco  arrays7.arco  arrays8.arco  arrays9.arco  decay_testing.arco
tests/resources/destructors/: destructors1.arco  destructors10.arco  destructors11.arco  destructors12.arco  destructors13.arco  destructors14.arco  destructors15.arco  destructors2.arco  destructors3.arco  destructors4.arco  destructors5.arco  destructors6.arco  destructors7.arco  destructors8.arco  destructors9.arco
tests/resources/enums/: enums1.arco  enums2.arco  enums3.arco  enums4.arco  enums5.arco  enums6.arco
tests/resources/errors/: errors1.arco  errors2.arco  errors3.arco  errors4.arco  errors5.arco
tests/resources/generics/: generic_structs1.arco  generic_structs2.arco  generic_structs3.arco  generic_structs4.arco  generic_structs5.arco  generics1.arco  generics10.arco  generics2.arco  generics3.arco  generics4.arco  generics5.arco  generics6.arco  generics7.arco  generics8.arco  generics9.arco
workarea/: CMakeLists.txt  WorkArea.cpp
(+120 files in other folders)
